--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section class="hero" id="home">
     <div class="container hero-content">
       <div class="hero-text fade-in-up">
-        <h1>Swabalambi Odisha</h1>
+        <h1>Swabalambi Odish DEMO</h1>
         <p>Swabalambi Odisha brings people, knowledge, and technology together help founders at every stage solve startups challenges.</p>
         <a href="#about" class="btn primary-btn">Learn More</a>
       </div>
