Fixed the font opacity issue

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
       <div class="about-text reveal">
         <h2>About Us</h2>
-        <p>Swabalambi Odisha is  affiliated to a Government of India funded Incubation centre, which by itself is an institution. We are also affiliated to privately owned and operated Incubation centres, in Odisha. Vital tools like infrastructure, technology, mentors, fund opportunities are all readily available under one roof.</p>
+        <p class="para-text">Swabalambi Odisha is  affiliated to a Government of India funded Incubation centre, which by itself is an institution. We are also affiliated to privately owned and operated Incubation centres, in Odisha. Vital tools like infrastructure, technology, mentors, fund opportunities are all readily available under one roof.</p>
       </div>
     </div>
     
@@ -89,17 +89,17 @@
         <div class="service-card reveal">
           <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?w=100&h=100&fit=crop&crop=center" alt="Skill Development">
           <h3>Skill Development</h3>
-          <p>Providing vocational training and skill development programs for self-reliance.</p>
+          <p class="para-text">Providing vocational training and skill development programs for self-reliance.</p>
         </div>
         <div class="service-card reveal">
           <img src="https://images.unsplash.com/photo-1523240795135-0f067a3e638d?w=100&h=100&fit=crop&crop=center" alt="Education Support">
           <h3>Education Support</h3>
-          <p>Assisting with inclusive education and learning resources for all ages.</p>
+          <p class="para-text">Assisting with inclusive education and learning resources for all ages.</p>
         </div>
         <div class="service-card reveal">
           <img src="https://images.unsplash.com/photo-1559027615-cd4628902d4a?w=100&h=100&fit=crop&crop=center" alt="Community Outreach">
           <h3>Community Outreach</h3>
-          <p>Engaging with communities to raise awareness and promote inclusion.</p>
+          <p class="para-text">Engaging with communities to raise awareness and promote inclusion.</p>
         </div>
       </div>
     </div>
@@ -166,9 +166,9 @@
     <div class="container contact-flex">
       <div class="contact-info reveal">
         <h2>Contact Us</h2>
-        <p>Email: <a href="mailto:info@swabalambi-odisha.org">info@swabalambi-odisha.org</a></p>
-        <p>Phone: <a href="tel:+911234567890">+91 12345 67890</a></p>
-        <p>Address: 123, Main Street, Bhubaneswar, Odisha</p>
+        <p class="para-text">Email: <a href="mailto:info@swabalambi-odisha.org">info@swabalambi-odisha.org</a></p>
+        <p class="para-text">Phone: <a href="tel:+911234567890">+91 12345 67890</a></p>
+        <p class="para-text">Address: 123, Main Street, Bhubaneswar, Odisha</p>
       </div>
       <div class="map-container reveal">
         <iframe 
@@ -199,9 +199,6 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
 
 
 
